--- a/src/index.html
+++ b/src/index.html
@@ -81,8 +81,11 @@
                     <span id="input_textHelpBlock" class="form-text text-muted">
                         Paste your text in here. It will be parsed and returned as an SVG file.
                         Requires a minimum of two sentences.
-                        <br/>Hint: This works better with more text -
-                        try dropping an entire <a href="http://www.gutenberg.org/browse/scores/top" target="_blank">Project Gutenberg</a> novel in here :)
+                        <br/>
+                        <small>Hint: This works better with more text -
+                            try dropping an entire
+                            <a href="http://www.gutenberg.org/browse/scores/top" target="_blank">Project Gutenberg</a>
+                            novel in here :)</small>
                     </span>
                 </div>
                 <div class="form-group">
