--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
         <!--TODO add an explanation for what this tool is, what it can do, options, etc-->
         <div class="row">
             <div class="col-xs-10 offset-xs-1">
-                <div id="display_loading" class="justify-content-center text-center bg-light"></div>
+                <div id="display_loading" class="text-center bg-light"></div>
                 <div id="display_results" class="justify-content-center text-center bg-light"></div>
             </div>
         </div>
