--- a/src/index.html
+++ b/src/index.html
@@ -62,9 +62,9 @@
     <div class="col-xs-10 offset-xs-1 col-sm-8 offset-sm-2 col-md-8 offset-md-2 col-lg-8 offset-lg-2 col-xl-6 offset-xl-3">
         <!--TODO add an explanation for what this tool is, what it can do, options, etc-->
         <div class="row">
-            <div class="col-xs-10 offset-xs-1">
-                <div id="display_loading" class="text-center bg-light"></div>
-                <div id="display_results" class="justify-content-center text-center bg-light"></div>
+            <div class="col-xs-8 offset-xs-2">
+                <div id="display_loading" class="align-content-center text-center bg-light"></div>
+                <div id="display_results" class="align-content-center text-center bg-light"></div>
             </div>
         </div>
 
@@ -178,12 +178,15 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-55820654-2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+
   gtag('js', new Date());
 
   gtag('config', 'UA-55820654-2');
 </script>
-
 
 
 </body>
