--- a/src/index.html
+++ b/src/index.html
@@ -100,6 +100,19 @@
                     <span id="input_line_colorHelpBlock" class="form-text text-muted">Input one hexadecimal color, including the # sign, here. This will be the primary color of the SVG path.</span>
                 </div>
                 <div class="form-group">
+                    <label for="input_line_bg_color">Background Color
+                        <small class="text-muted"> Optional</small>
+                    </label>
+                    <div class="input-group">
+                        <div class="input-group-addon">
+                            <i class="fa fa-align-justify"></i>
+                        </div>
+                        <input id="input_line_bg_color" name="input_line_bg_color" placeholder="#FFF" type="text"
+                               aria-describedby="input_line_bg_colorHelpBlock" class="form-control here">
+                    </div>
+                    <span id="input_line_bg_colorHelpBlock" class="form-text text-muted">Input one hexadecimal color here.</span>
+                </div>
+                <div class="form-group">
                     <label for="input_node_colors">Start/End Point Colors
                         <small class="text-muted"> Optional</small>
                     </label>
