--- a/src/index.html
+++ b/src/index.html
@@ -156,6 +156,20 @@
 
 
         <div class="row">
+            <div class="col pb-2 justify-content-center text-center">
+                <div class="col text-center">
+                    <p class="lead text-capitalize text-small">Presets</p>
+                </div>
+                <div class="btn-group" role="group" id="color_preset">
+                    <button class="btn btn-sm btn-info" role="button" id="oceanfire">Ocean Fire</button>
+                    <button class="btn btn-sm btn-info" role="button" id="newnoir">New Noir</button>
+                    <button class="btn btn-sm btn-info" role="button" id="boldusa">Bold USA</button>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row">
             <div class="album py-3 bg-light">
                 <div class="container">
                     <div class="row">
